
	* Fixed bug #12438: Bugfix - tt_content bodytext wizard icons aren't aligned properly (Thanks to Tolleiv Nietsch)

2009-11-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12597: htmlArea RTE: cursor position is not restored by undo/redo operations in Opera
	* Fixed bug #12421: htmlArea RTE: Paste is erratic in Opera 10 when server-based cleaning is enabled

2009-11-14  Francois Suter  <francois@typo3.org>

	* Fixed bug #12464: Reports: Sorting of status collections wrongly relied on localized strings

2009-11-14  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed bug #12522: t3editor/codecompletion: tsref properties get listed twice when they are defined
	* Fixed bug #12523: t3editor/codecompletion: Gifbuilder TEXT and Gifbuilder IMAGE inside of GMENU_itemState
	* Fixed bug #12527: t3editor/codecompletion: parser error on brackets on the right side of an operator
	* Fixed bug #12528: t3editor/codecompletion: IMG_RESOURCE missing in tsref

2009-11-13  Francois Suter  <francois@typo3.org>

	* Fixed bug #12550: Scheduler: Added some space between the sections of the "scheduled tasks"-screen

2009-11-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #4670: htmlArea RTE: Problem when cutting pasting links within table cells or list items

2009-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12566: htmlArea RTE: Selecting element from status bar does not work in Safari
	* Fixed bug #12568: htmlArea RTE: Text pasted by Safari is wrapped in span or font tags

2009-11-11  Francois Suter  <francois@typo3.org>

	* Cleanup #12552: Scheduler: Corrected inconsistent use of full stops in language labels

2009-11-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12557: Wrong file references and colors in t3skin-extjs theme, missing icon in recycler

2009-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12115: htmlArea RTE "Create link" button doesn't become clickable when using keyboard to select text in Safari/Chrome
